@@ -9,7 +9,7 @@
     <url>https://github.com/kofemann/vfs4j</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>18</java.version>
+        <java.version>19</java.version>
     </properties>
 
     <build>
@@ -25,10 +25,9 @@
                      <!-- without forking compilation happens in the
                          same process, so no arguments are applied -->
                     <fork>true</fork>
-                    <executable>/usr/lib/jvm/java-18/bin/javac</executable>
+                    <executable>/usr/lib/jvm/java-19/bin/javac</executable>
                     <compilerArgs>
-                        <arg>--add-modules</arg>
-                        <arg>jdk.incubator.foreign</arg>
+                        <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
